--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8"/>
     <title> Tudo sobre Google Glass</title>
+    <style>
+        body{
+            background-image: url("fundo.jpg");
+            background-color: rgb(35, 137,195);
+        }
+        p{
+            text-align: justify;
+            text-indent: 50px;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,35 +41,10 @@
             <h3> Atualizado em 23/Abril/2020</h3>
         </hgroup>
         <h1>Símbolos especiais</h1>
-        <p>
-            &lt;
-            &gt;
-            &le;
-            &ge;
-            &pound;  <br />
-            &yen;
-            &yen;
-            &copy;
-            &reg;  <br />
-            &trade; 
-            &permil;
-            &infin;
-            &sum;
-            &times;
-            &ne;
-            &delta;
-            &Lambda;
-            &phi;
-            &larr; <br />
-            &spades;
-            &diams;
-            &hearts;
-            &clubs;
-        </p>
+        <h2 style="text-align:center" >O que é</h2>
 
 
-        <h2>O que é</h2>
-        <p>O Google Glass é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+        <p>O <span style="font-weight:bolder">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o <u>eletrônico</u> é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
         [AQUI ENTRA UMA FOTO]
 
@@ -67,11 +52,11 @@
         <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
         <h1>Especificações Técnicas</h1>
-        Tabela Técnica do Google Glass Mar/2013
+        Tabela Técnica do Google Glass Mar/2013 <br />
 
-        Tela:Resolução equivalente a tela de 25"
-        Camera: 5MP para fotos / 720p para vídeos
-        Conectividade: Wi-Fi/ Bluetooth
+        Tela:Resolução equivalente a tela de 25" <br/>
+        Camera: 5MP para fotos / 720p para vídeos <br />
+        Conectividade: Wi-Fi/ Bluetooth <br />
         Memória Interna: 12GB
 
         <h1>Como funciona</h1>
